# Jobstats-on-SuperPOD

./: .gitignore  How-To-Guide.md  How-To_template.md  README.md  Troubleshooting.md  config-existing-monitoring.json  config-lab.json  config-shared-hosts.json  config.json.template  deploy_jobstats.py  dgx-jobstats.md  dry-run-output.txt  pyproject.toml  setup.sh
automation/: README.md  deploy_jobstats.py  deploy_jobstats_original.py  guided_setup.py  test_deployment.py
automation/configs/: config-category-management.json  config-existing-monitoring.json  config-shared-hosts.json  config.json  config.json.template
automation/docs/: guided_setup_fixes_needed.md  jobstats_patches.md
automation/logs/: .gitkeep  bcm-imaging-analysis.md  dry-run-output.txt
automation/role-monitor/: README.md  bcm-role-monitor.service  bcm-role-monitor.service.example-custom-targets  bcm_role_monitor.py  bcm_role_monitor_pythoncm.py  deploy_bcm_role_monitor.py
automation/tools/: README.md  convert_pdfs.sh  cpu_load_test.py  cpu_test_job.sh  fix_alloc_cores_simple.py  fix_jobstats_alloc_cores.py  fix_jobstats_timelimit.py  jobstats_patch.py  test_jobstats_deployment.sh  test_jobstats_job.py  test_jobstats_pytorch.py  test_jobstats_pytorch.sh  verify-jobstats.sh  (+1 more)
bcm-documentation-text/: admin-manual.txt  cloudbursting-manual.txt  containerization-manual.txt  developer-manual.txt  edge-manual.txt  installation-manual.txt  machine-learning-manual.txt  user-manual.txt
capacity-planning/: README.md  prometheus_capacity_planner.py
cursor-chats/: cursor_chat_1.md  cursor_chat_2.md
