[project]
name = "bcm-jobstats-deployer"
version = "1.0.0"
description = "BCM Jobstats Deployment Automation Script"
authors = [
    {name = "Travis W", email = "travisw@nvidia.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["automation"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
